--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/28Z2211.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/28Z2211.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html><html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <title>纳妮儿防伪查询平台</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <script src="../../../codepage/nne/content/global.js"></script>
@@ -41,37 +42,25 @@
         <div id="slideBox" class="slideBox">
             <div class="bd">
                 <div class="tempWrap" style="overflow:hidden; position:relative;">
-                    <div class="tempWrap" style="overflow:hidden; position:relative;">
-                        <div class="tempWrap" style="overflow:hidden; position:relative;"><div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 2880px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-320px, 0px) translateZ(0px);">
-                            <li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li><li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li><li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
-                            <li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
-                            <li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
-                            <li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
-                            <li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
+                    <div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 1600px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-320px, 0px) translateZ(0px);">
                         <li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li><li style="display: table-cell; vertical-align: top; width: 320px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li></ul></div></div>
-                    </div>
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                        </li><li style="display: table-cell; vertical-align: top; width: 320px;">
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                        </li>
+                        <li style="display: table-cell; vertical-align: top; width: 320px;">
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                        </li>
+                        <li style="display: table-cell; vertical-align: top; width: 320px;">
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                        </li>
+                    <li style="display: table-cell; vertical-align: top; width: 320px;">
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                        </li></ul></div>
                 </div>
             </div>
             <div class="hd">
-                <ul><li class="on">1</li><li class="">2</li><li class="">3</li><li class="">4</li><li class="">5</li><li class="">6</li><li class="">7</li></ul>
+                <ul><li class="on">1</li><li class="">2</li><li class="">3</li></ul>
             </div>
         </div>
     </div>
@@ -175,7 +164,9 @@
     <div class="collectionsColorBoxBg"></div>
 
 
-    <script type="text/javascript">
+
+
+<script type="text/javascript">
     TouchSlide({
         slideCell: "#slideBox",
         titCell: "#slideBox .hd ul", //开启自动分页 autoPage:true ，此时设置 titCell 为导航元素包裹层
@@ -184,8 +175,8 @@
         autoPage: true //自动分页
     });
 
-    </script>
-    <script type="text/javascript">
+</script>
+<script type="text/javascript">
 
     var bodyScrollTop;
 
@@ -289,8 +280,6 @@
             return false;
         });
 
-
+      
     });
-    </script>
-
-</body></html>
+</script></body></html>
