--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/template.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/template.html
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="power">
-        <p>技术支持：<a href="http://www.sthycy.com/">辉亿</a> 联系电话：<a href="tel:0754-88828882" mce_href="tel:0754-88828882">0754-88828882</a></p>
+        <p>技术支持：<a href="http://www.haohanbao.cn/">码农之田</a> 联系电话：<a href="tel:13726700259" mce_href="tel:13726700259">13726700259</a></p>
     </div>
     <div class="nav brandNavBackgroundColor">
         <ul>
